--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" />
 </head>
+
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <div class="logo">LOGO</div>
+        <div class="nav">
+            <ul>
+                <li><a href="#">NEWS</a></li>
+                <li><a href="#">CINTAS</a></li>
+                <li><a href="#">PIJAMAS</a></li>
+                <li><a href="#">CAMISOLAS</a></li>
+                <li><a href="#">GESTANTE</a></li>
+                <li><a href="#">SEXY</a></li>
+                <li><a href="#">SUTIÃS</a></li>
+                <li><a href="#">COLEÇÕES</a></li>
+                <li><a href="#">OUTLET</a></li>
+            </ul>
+        </div>
+        <div class="user">
+            <div class="search-icon">
+                <img src="svg/seach-icon.svg" alt="seach-icon">
+            </div>
+
+            <div class="favorite-icon">
+                <img src="svg/favorite-icon.svg" alt="favorite-icon">
+            </div>
+
+            <div class="login-signup">
+                <img src="svg/user.svg" alt="user" id="user-icon">
+                <a href="">Login</a> | <a href="">Cadastre-se</a>
+            </div>
+
+            <div class="cart">
+                <img src="svg/cart.svg" alt="cart"> <p>R$0,00</p>
+            </div>
+        </div>
+    </header>
 
     <script src="script.js"></script>
 </body>
+
 </html>
