add feature section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce Landing Page</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -40,14 +37,116 @@
 
             <div class="login-signup">
                 <img src="svg/user.svg" alt="user" id="user-icon">
-                <a href="">Login</a> | <a href="">Cadastre-se</a>
+                <a href="">Login</a>
+                <p>&nbsp|&nbsp</p><a href="">Cadastre-se</a>
             </div>
 
             <div class="cart">
-                <img src="svg/cart.svg" alt="cart"> <p>R$0,00</p>
+                <img src="svg/cart.svg" alt="cart">
+                <p>R$0,00</p>
             </div>
         </div>
     </header>
+
+    <!-- BANNER -->
+    <section class="banner">
+        <img src="img/slider1.jpg" height="200px">
+    </section>
+
+    <!-- LANÇAMENTOS -->
+    <section class="lancamentos">
+        <h2>Lançamentos</h2>
+        <div class="lista-produtos">
+            <div class="pro" id="produto1">
+                <div class="img-container">
+                    <img src="img/produto1.png" alt="">
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5>Lorem ipsum dolor sit amet </h5>
+                <span id="ref">ref.: pdc202</span>
+                <h4>R$ 55,90</h4>
+                <span id="boleto">no boleto</span>
+                <p id="vezes">em até 10x de R$ 6,30</p>
+                <div class="botao">
+                    <button class="compre-button">COMPRE AGORA</button>
+                </div>
+            </div>
+
+            <div class="pro" id="produto2">
+                <div class="img-container">
+                    <img src="img/produto2.png" alt="">
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5>Lorem ipsum dolor sit amet </h5>
+                <span id="ref">ref.: pdc202</span>
+                <h4>R$ 55,90</h4>
+                <span id="boleto">no boleto</span>
+                <p id="vezes">em até 10x de R$ 6,30</p>
+                <div class="botao">
+                    <button class="compre-button">COMPRE AGORA</button>
+                </div>
+            </div>
+
+            <div class="pro" id="produto3">
+                <div class="img-container">
+                    <img src="img/produto3.png" alt="">
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5>Lorem ipsum dolor sit amet </h5>
+                <span id="ref">ref.: pdc202</span>
+                <h4>R$ 55,90</h4>
+                <span id="boleto">no boleto</span>
+                <p id="vezes">em até 10x de R$ 6,30</p>
+                <div class="botao">
+                    <button class="compre-button">COMPRE AGORA</button>
+                </div>
+            </div>
+
+            <div class="pro" id="produto4">
+                <div class="img-container">
+                    <img src="img/produto4.png" alt="">
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5>Lorem ipsum dolor sit amet </h5>
+                <span id="ref">ref.: pdc202</span>
+                <h4>R$ 55,90</h4>
+                <span id="boleto">no boleto</span>
+                <p id="vezes">em até 10x de R$ 6,30</p>
+                <div class="botao">
+                    <button class="compre-button">COMPRE AGORA</button>
+                </div>
+            </div>
+
+        </div>
+        <a href="#">Ver Todas</a>
+    </section>
+
+
+
 
     <script src="script.js"></script>
 </body>
