add feature section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,42 @@
         <a href="#">Ver Todas</a>
     </section>
 
+    <!-- FEATURES -->
 
+    <section>
+        <div class="features-container">
+            <div class="image-container">
+                <div class="feature-images">
+                    <img src="img/004-001-000.png" alt="">
+                    <div class="feature-text">
+                        <p>FRETE GRÁTIS A PARTIR DE</p>
+                        <p>R$ 199 (SUDESTE) E R$ 299 (BRASIL)</p>
+                    </div>
+                </div>
+                <div class="feature-images">
+                    <img src="img/004-002-000.png" alt="">
+                    <div>
+                        <p>FRETE GRÁTIS A PARTIR DE</p>
+                        <p>R$ 199 (SUDESTE) E R$ 299 (BRASIL)</p>
+                    </div>
+                </div>
+                <div class="feature-images">
+                    <img src="img/004-003-001.png" alt="">
+                    <div>
+                        <p>FRETE GRÁTIS A PARTIR DE</p>
+                        <p>R$ 199 (SUDESTE) E R$ 299 (BRASIL)</p>
+                    </div>
+                </div>
+                <div class="feature-images">
+                    <img src="img/004-004-000.png" alt="">
+                    <div>
+                        <p>FRETE GRÁTIS A PARTIR DE</p>
+                        <p>R$ 199 (SUDESTE) E R$ 299 (BRASIL)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
