add linhas section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -146,7 +146,6 @@
     </section>
 
     <!-- FEATURES -->
-
     <section>
         <div class="features-container">
             <div class="image-container">
@@ -183,7 +182,6 @@
     </section>
 
     <!-- DESTAQUES -->
-
     <section class="lancamentos">
         <h2>Destaques</h2>
         <div class="lista-produtos">
@@ -275,6 +273,37 @@
         <a href="#">Ver Todas</a>
     </section>
 
+    <!-- COLEÇÕES -->
+    <section class="colecoes">
+        <div class="linhas">
+            <div class="esquerda">
+                <div id="camisolas">
+                    <div class="linhas-texto">
+                        <h2>Camisolas</h2>
+                        <p>Para quem <br>quer relaxar</p>
+                        <button>VEJA MAIS</button>
+                    </div>
+                </div>
+            </div>
+            <div class="direita">
+                <div id="linha-noite">
+                    <div class="linhas-texto">
+                        <h2>Linha noite</h2>
+                        <p>Para quem ama <br> praticidade</p>
+                        <button>VEJA MAIS</button>
+                    </div>
+                </div>
+                <div id="sutias">
+                    <div class="linhas-texto">
+                        <h2>Sutiãs</h2>
+                        <p>Para quem ama <br> conforto</p>
+                        <button>VEJA MAIS</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
     <script src="script.js"></script>
 </body>
