--- a/index.html
+++ b/index.html
@@ -398,7 +398,10 @@
         </section>
     </section>
 
-    
+    <!-- BANNER FIXO -->
+    <section class="banner-fixo">
+        <img src="img/fixo.jpg" alt="">
+    </section>
 
     <script src="script.js"></script>
 </body>
