--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <!-- HEADER -->
     <header>
         <div class="logo">LOGO</div>
+
+        <div class="menu-icon" id="menu-icon">
+            &#9776;
+        </div>
         <div class="nav">
-            <ul>
+            <ul id="nav-links">
                 <li><a href="#">NEWS</a></li>
                 <li><a href="#">CINTAS</a></li>
                 <li><a href="#">PIJAMAS</a></li>
@@ -435,7 +439,7 @@
                         <i id="quote-right" class="fa-duotone fa-solid fa-quote-right"></i>
                     </div>
                 </div>
-                <div class="persona1">
+                <div class="persona1" id="p2">
                     <div class="persona-header">
                         <div><img src="img/persona2.png" alt=""></div>
                         <div class="persona-info">
@@ -457,7 +461,7 @@
                         <i id="quote-right" class="fa-duotone fa-solid fa-quote-right"></i>
                     </div>
                 </div>
-                <div class="persona1">
+                <div class="persona3" id="p3">
                     <div class="persona-header">
                         <div><img src="img/persona3.png" alt=""></div>
                         <div class="persona-info">
@@ -501,7 +505,7 @@
                     <p>Cadastre-se o seu e-mail e <strong>ganhe <br> 10% de desconto</strong> na sua primeira compra
                     </p>
                 </div>
-                <form action="#">
+                <form id="form-inputs" action="#">
                     <input type="nome" id="nome" name="nome" placeholder="NOME">
                     <input type="nome" id="nome" name="nome" placeholder="E-MAIL">
                     <button class="cadastrar">CADASTRAR</button>
